// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/dot_menu/PostReminderCustomTimePicker should submit the selected time in milliseconds for the reminder on a post 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    />
    <div
      role="dialog"
    >
      <div
        class="fade modal-backdrop"
      />
      <div
        aria-label="Set a reminder"
        class="fade modal"
        id="PostReminderCustomTimePickerModal"
        role="dialog"
        style="display: block; padding-right: 0px;"
        tabindex="-1"
      >
        <div
          class="a11y__modal GenericModal PostReminderModal modal-overflow modal-dialog"
        >
          <div
            class="modal-content"
            role="document"
          >
            <div
              data-testid="sentinelStart"
              tabindex="-1"
            />
            <div
              class="GenericModal__wrapper-enter-key-press-catcher"
              tabindex="0"
            >
              <div
                class="modal-header"
              >
                <button
                  aria-label="Close"
                  class="close"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                  <span
                    class="sr-only"
                  >
                    Close
                  </span>
                </button>
              </div>
              <div
                class="modal-body"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    id="genericModalLabel"
                  >
                    Set a reminder
                  </h1>
                </div>
                <div
                  class="GenericModal__body"
                >
                  <div
                    class="PostReminderModal__content"
                  >
                    <div>
                      <div
                        class="PostReminderModal__input PostReminderModal__input--no-border"
                        data-testid="dayPicker-input"
                      >
                        <div
                          class="PostReminderModal__input__label"
                        >
                          Date
                        </div>
                        <i
                          class="icon icon--no-spacing icon-calendar-outline icon--xs icon-14"
                        />
                        <div
                          class="DayPickerInput"
                        >
                          <input
                            placeholder="YYYY-M-D"
                            value="2023-02-15"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MenuWrapper "
                      id="dropdown-no-caret"
                    >
                      <button
                        class="PostReminderModal__input"
                        data-testid="timePicker-button"
                        type="button"
                      >
                        <div
                          class="PostReminderModal__input__label"
                        >
                          Time
                        </div>
                        <i
                          class="icon icon--no-spacing icon-clock-outline icon--xs icon-14"
                        />
                        <span>
                          8:00 AM
                        </span>
                      </button>
                      <div
                        aria-label="Clear custom status after"
                        class="a11y__popup Menu MenuWrapperAnimation-exit MenuWrapperAnimation-exit-active"
                        role="menu"
                      >
                        <ul
                          class="Menu__content dropdown-menu"
                        >
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_7:30 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="7:30 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                7:30 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_8:00 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="8:00 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                8:00 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_8:30 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="8:30 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                8:30 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_9:00 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="9:00 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                9:00 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_9:30 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="9:30 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                9:30 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_10:00 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="10:00 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                10:00 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_10:30 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="10:30 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                10:30 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_11:00 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="11:00 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                11:00 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_11:30 AM"
                            role="menuitem"
                          >
                            <button
                              aria-label="11:30 AM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                11:30 AM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_12:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="12:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                12:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_12:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="12:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                12:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_1:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="1:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                1:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_1:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="1:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                1:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_2:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="2:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                2:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_2:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="2:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                2:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_3:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="3:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                3:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_3:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="3:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                3:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_4:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="4:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                4:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_4:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="4:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                4:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_5:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="5:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                5:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_5:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="5:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                5:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_6:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="6:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                6:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_6:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="6:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                6:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_7:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="7:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                7:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_7:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="7:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                7:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_8:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="8:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                8:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_8:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="8:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                8:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_9:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="9:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                9:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_9:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="9:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                9:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_10:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="10:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                10:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_10:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="10:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                10:30 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_11:00 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="11:00 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                11:00 PM
                              </span>
                            </button>
                          </li>
                          <li
                            class="MenuItem"
                            id="postReminderTime_dropdown_11:30 PM"
                            role="menuitem"
                          >
                            <button
                              aria-label="11:30 PM hours"
                              class="style--none"
                            >
                              <span
                                class="MenuItem__primary-text"
                              >
                                11:30 PM
                              </span>
                            </button>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="modal-footer"
              >
                <button
                  class="GenericModal__button confirm"
                  type="submit"
                >
                  Set reminder
                </button>
              </div>
            </div>
            <div
              data-testid="sentinelEnd"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/dot_menu/PostReminderCustomTimePicker should submit the tomorrow's date in milliseconds for the reminder on a post 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="modal-open"
    style="padding-right: 0px;"
  >
    <div
      aria-hidden="true"
    />
    <div
      role="dialog"
    >
      <div
        class="fade modal-backdrop"
      />
      <div
        aria-label="Set a reminder"
        class="fade modal"
        id="PostReminderCustomTimePickerModal"
        role="dialog"
        style="display: block; padding-right: 0px;"
        tabindex="-1"
      >
        <div
          class="a11y__modal GenericModal PostReminderModal modal-overflow modal-dialog"
        >
          <div
            class="modal-content"
            role="document"
          >
            <div
              data-testid="sentinelStart"
              tabindex="-1"
            />
            <div
              class="GenericModal__wrapper-enter-key-press-catcher"
              tabindex="0"
            >
              <div
                class="modal-header"
              >
                <button
                  aria-label="Close"
                  class="close"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                  >
                    ×
                  </span>
                  <span
                    class="sr-only"
                  >
                    Close
                  </span>
                </button>
              </div>
              <div
                class="modal-body"
              >
                <div
                  class="GenericModal__header"
                >
                  <h1
                    id="genericModalLabel"
                  >
                    Set a reminder
                  </h1>
                </div>
                <div
                  class="GenericModal__body"
                >
                  <div
                    class="PostReminderModal__content"
                  >
                    <div>
                      <div
                        class="PostReminderModal__input PostReminderModal__input--no-border"
                        data-testid="dayPicker-input"
                      >
                        <div
                          class="PostReminderModal__input__label"
                        >
                          Date
                        </div>
                        <i
                          class="icon icon--no-spacing icon-calendar-outline icon--xs icon-14"
                        />
                        <div
                          class="DayPickerInput"
                        >
                          <input
                            placeholder="YYYY-M-D"
                            value="2023-02-18"
                          />
                          <div
                            class="DayPickerInput-OverlayWrapper"
                            tabindex="0"
                          >
                            <div
                              class="DayPickerInput-Overlay"
                            >
                              <div
                                class="DayPicker"
                                lang="en"
                              >
                                <div
                                  class="DayPicker-wrapper"
                                  tabindex="0"
                                >
                                  <div
                                    class="DayPicker-NavBar"
                                  >
                                    <span
                                      aria-label="Previous Month"
                                      class="DayPicker-NavButton DayPicker-NavButton--prev"
                                      role="button"
                                      tabindex="0"
                                    />
                                    <span
                                      aria-label="Next Month"
                                      class="DayPicker-NavButton DayPicker-NavButton--next"
                                      role="button"
                                      tabindex="0"
                                    />
                                  </div>
                                  <div
                                    class="DayPicker-Months"
                                  >
                                    <div
                                      class="DayPicker-Month"
                                      role="grid"
                                    >
                                      <div
                                        aria-live="polite"
                                        class="DayPicker-Caption"
                                        role="heading"
                                      >
                                        <div>
                                          February 2023
                                        </div>
                                      </div>
                                      <div
                                        class="DayPicker-Weekdays"
                                        role="rowgroup"
                                      >
                                        <div
                                          class="DayPicker-WeekdaysRow"
                                          role="row"
                                        >
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Sunday"
                                            >
                                              Su
                                            </abbr>
                                          </div>
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Monday"
                                            >
                                              Mo
                                            </abbr>
                                          </div>
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Tuesday"
                                            >
                                              Tu
                                            </abbr>
                                          </div>
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Wednesday"
                                            >
                                              We
                                            </abbr>
                                          </div>
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Thursday"
                                            >
                                              Th
                                            </abbr>
                                          </div>
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Friday"
                                            >
                                              Fr
                                            </abbr>
                                          </div>
                                          <div
                                            class="DayPicker-Weekday"
                                            role="columnheader"
                                          >
                                            <abbr
                                              title="Saturday"
                                            >
                                              Sa
                                            </abbr>
                                          </div>
                                        </div>
                                      </div>
                                      <div
                                        class="DayPicker-Body"
                                        role="rowgroup"
                                      >
                                        <div
                                          class="DayPicker-Week"
                                          role="row"
                                        >
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--disabled DayPicker-Day--outside"
                                          />
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--disabled DayPicker-Day--outside"
                                          />
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--disabled DayPicker-Day--outside"
                                          />
                                          <div
                                            aria-disabled="true"
                                            aria-label="Wed Feb 01 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="0"
                                          >
                                            1
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Thu Feb 02 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            2
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Fri Feb 03 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            3
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Sat Feb 04 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            4
                                          </div>
                                        </div>
                                        <div
                                          class="DayPicker-Week"
                                          role="row"
                                        >
                                          <div
                                            aria-disabled="true"
                                            aria-label="Sun Feb 05 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            5
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Mon Feb 06 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            6
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Tue Feb 07 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            7
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Wed Feb 08 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            8
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Thu Feb 09 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            9
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Fri Feb 10 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            10
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Sat Feb 11 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            11
                                          </div>
                                        </div>
                                        <div
                                          class="DayPicker-Week"
                                          role="row"
                                        >
                                          <div
                                            aria-disabled="true"
                                            aria-label="Sun Feb 12 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            12
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Mon Feb 13 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            13
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            aria-label="Tue Feb 14 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--disabled"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            14
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Wed Feb 15 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            15
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Thu Feb 16 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            16
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Fri Feb 17 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day DayPicker-Day--today"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            17
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Sat Feb 18 2023"
                                            aria-selected="true"
                                            class="DayPicker-Day DayPicker-Day--selected"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            18
                                          </div>
                                        </div>
                                        <div
                                          class="DayPicker-Week"
                                          role="row"
                                        >
                                          <div
                                            aria-disabled="false"
                                            aria-label="Sun Feb 19 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            19
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Mon Feb 20 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            20
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Tue Feb 21 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            21
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Wed Feb 22 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            22
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Thu Feb 23 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            23
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Fri Feb 24 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            24
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Sat Feb 25 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            25
                                          </div>
                                        </div>
                                        <div
                                          class="DayPicker-Week"
                                          role="row"
                                        >
                                          <div
                                            aria-disabled="false"
                                            aria-label="Sun Feb 26 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            26
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Mon Feb 27 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            27
                                          </div>
                                          <div
                                            aria-disabled="false"
                                            aria-label="Tue Feb 28 2023"
                                            aria-selected="false"
                                            class="DayPicker-Day"
                                            role="gridcell"
                                            tabindex="-1"
                                          >
                                            28
                                          </div>
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--outside"
                                          />
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--outside"
                                          />
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--outside"
                                          />
                                          <div
                                            aria-disabled="true"
                                            class="DayPicker-Day DayPicker-Day--outside"
                                          />
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MenuWrapper "
                      id="dropdown-no-caret"
                    >
                      <button
                        class="PostReminderModal__input"
                        data-testid="timePicker-button"
                        type="button"
                      >
                        <div
                          class="PostReminderModal__input__label"
                        >
                          Time
                        </div>
                        <i
                          class="icon icon--no-spacing icon-clock-outline icon--xs icon-14"
                        />
                        <span>
                          0:00 AM
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="modal-footer"
              >
                <button
                  class="GenericModal__button confirm"
                  type="submit"
                >
                  Set reminder
                </button>
              </div>
            </div>
            <div
              data-testid="sentinelEnd"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div
    aria-hidden="true"
  />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
